add comments to all sections across 3 pages

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
@@ -9,11 +9,13 @@
     <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
 <body>
+      <!-- header section-->
     <header>
         <a href="../projectsPage/index.html" id="changeMe1"><p class="projectsHeader">Projects</p></a>
         <a href="../../../index.html" id="changeMe2"><p class="aboutMeHeader">About me</p></a>
         <a href="" id="changeMe3"><p class="contactHeader" id="change3">Contact</p></a>
     </header>
+      <!-- dark mode button -->
     <div class="DMDiv">
         <p>Dark mode:</p>
         <label class="switch">
@@ -25,10 +27,13 @@
             <span class="slider"></span>
         </label>
     </div>
+    <!-- contact section -->
     <h1>Contact</h1>
     <p>Feel free to contact me via the options listed below.</p>
+    <!-- email section -->
     <h3>Email</h3>
     <p>j.raunstrup@gmail.com</p>
+    <!-- linkdin section -->
     <h3>linkdin</h3>
     <p>Jens Raunstrup</p>
     <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="link" id="cLink"><p>Go to my linkedin profile</p></a>
