--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
@@ -8,11 +8,13 @@
     <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
 <body>
+  <!-- header section-->
   <header>
     <a href="" id="changeMe1"><p class="projectsHeader" id="change1">Projects</p></a>
     <a href="../../../index.html" id="changeMe2"><p class="aboutMeHeader">About me</p></a>
     <a href="../contactPage/index.html" id="changeMe3"><p class="contactHeader">Contact</p></a>
   </header>
+  <!-- dark mode button -->
   <div class="DMDiv">
     <p>Dark mode:</p>
     <label class="switch">
@@ -24,57 +26,69 @@
         <span class="slider"></span>
     </label>
   </div>
+  <!-- projects desciption section-->
     <h1>Projects</h1>
     <p>These are some of the things I have made</p>
     <p>Click on the buttons to see some of my projects: </p>
+    <!-- project list section -->
     <div class="projectsList">
+      <!-- fotomatic section -->
       <div class="fotomatic">
         <h3>Camera site: Fotomatic</h3>
           <p>This can be viewed on dekstop and mobile</p>
           <a class="button" href="https://j-raunstrup.github.io/CodeCademy/F1C1_start/">Click to go to site!</a>
       </div>
+      <!-- teaCozy section -->
       <div class="teaCozy">
       <h3>Tea store site: TeaCozy</h3>
         <p>This can be viewed on desktop only</p>
         <a class="button" href="https://j-raunstrup.github.io/CodeCademy/TeaCozy/">Click to go to site!</a>
       </div>
+      <!-- colmar academy section -->
       <div class="colmarAcademy">
         <h3>Learn to code site: ColmarAcademy</h3>
         <p>This can be viewed on desktop and mobile</p>
         <a class="button" href="https://j-raunstrup.github.io/CodeCademy/ColmarAcademy">Click to go to site!</a>
       </div>
+      <!-- grundforløbs prøve section -->
       <div class="grundforløbs prøve">
         <h3>Events for companies site: Event centrum</h3>
         <p>(Earlier basic course exam for webintegrator)</p>
         <p>This can be viewed on desktop only</p>
         <a class="button" href="https://j-raunstrup.github.io/Webintegrator-grundforløbsprøve">Click to go to site!</a>
       </div>
+      <!-- excursion section -->
       <div class="excursion">
         <h3>Phone app annoncement site: Excursion</h3>
         <p>This can be viewed on desktop and mobile</p>
         <a class="button" href="https://j-raunstrup.github.io/CodeCademy/excursion">Click to go to site!</a>
-      </div>    
+      </div>
+      <!-- html and css cheatsheet section -->    
       <div class="htmlAndCssCheatsheet">
         <h3>Cheatsheet for css layout</h3>
         <p>This can be viewed on desktop and mobile</p>
         <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/html-css-cheatsheet-starting">Click to go to site!</a>
       </div>
+      <!-- website design system section -->
       <div class="websiteDesignSystem">
         <h3>Website design system site</h3>
         <p>Showing an example of deciding on colours fonts and the basic elements of a site</p>
         <p>This can be viewed on desktop only</p>
         <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/website-design-system-starting/starting">Click to go to site!</a>
       </div>
+      <!-- brians garage section -->
       <div class="briansGarage">
         <h3>Company site: brians garage (parody)</h3>
           <p>This can be viewed on desktop and mobile</p>
           <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/flexbox-business-site-starting">Click to go to site!</a>
       </div>
+      <!-- brians gym section -->
       <div class="briansGym">
         <h3>Club site: brians gym (parody)</h3>
         <p>Thsi can be viewed on desktop and mobile</p>
         <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting">Click to go to site!</a>
       </div>
+      <!-- number guesser site section -->
       <div class="numberGuesserSite">
         <h3>Number guesser site: (Implements a little javascript)</h3>
           <p>I wrote the javascript from specified assignments. The css and html was already completed. I made the javascript</p>
@@ -82,6 +96,7 @@
           <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/number-guesser-starting">Click to go to site!</a>
       </div>
     </div>
+    <!-- github repositories section -->
     <div class="githubRepos">
       <h2>My github repositories can also be viewed here: </h2>
       <p>Here the code behind my projects can be viewed. Its updated from time to time</p>
