--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -29,13 +29,16 @@
 
         maybe also add a contact page. so 3 pages maybe. projects. about me, and contact. unsure if a fourth one should be added
         
+        missing the dark mode keep function and maybe the page breaks.
         deadline done by december 19. max.
      -->
+     <!-- header section -->
     <header>
         <a href="./resources/nestedPages/projectsPage/index.html" id="changeMe1"><p class="projectsHeader" id="change1">Projects</p></a>
         <a href="./index.html" id="changeMe2"><p class="aboutMeHeader" id="change2">About me</p></a>
         <a href="./resources/nestedPages/contactPage/index.html" id="changeMe3"><p class="contactHeader">Contact</p></a>
     </header>
+    <!-- dark mode button -->
     <div class="DMDiv">
         <p>Dark mode:</p>
         <label class="switch">
@@ -47,12 +50,14 @@
             <span class="slider"></span>
         </label>
     </div>
+    <!-- about me section -->
     <div>
         <h1>About me</h1>
         <p>Hello my name is Jens. I'm a 22 year old programmer based in Copenhagen Denmark. I'm interested in learning different technologies that create value for users.</p>
         <p>I have made a couple of websites with HTML, CSS and javascript. I have also tried analyzing and organizing datasets with SQL and made applications in C#.</p>
         <p>I like to learn different things so I have dabbled a little in power BI to try and visualize SQL data. I have also tried using blender a little to try out 3D modelling</p>
     </div>
+    <!-- bigger projects -->
     <div>
         <h2>Bigger projects</h2>
         <div class="biggerProjects">
@@ -64,30 +69,37 @@
             <img src="./resources/images/billede af en selv sort hvid.jpeg" alt="image of me" class="portrait">
         </div>
         <p>Press/click images below to go to corresponding sites</p>
+            <!-- brians gym project seciton-->
             <h3>Brians gym website</h3>
             <div class="bigProjectDiv">
                 <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting/"><img src="./resources/images/brianSiteImage-kopi.png" alt="brianSiteImage"></a>
                 <p><span>Description:</span> This project was an attempt to make a club site. It's also a parody so some sarcasm has been used.</p>
                 <p><span>Technologies used:</span> HTML, CSS, VS code text editor, github and github pages.</p>
+                <!-- roulette project seciton-->
                 <h3>Roulette project</h3>
                     <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/JakobC%23Bootcamp/repos/Roulettespil%20C%23/Roulettespil%20C%23/Program.cs"><img src="resources/images/rouletteProjectImg.png" alt=""></a>
                     <p><span>Description:</span> This project was an attempt to make a text based roulette game, where functions and built in methods were used.</p>
                     <p><span>Technologies used:</span> C# and visual studio</p>
+                <!-- SQL usage funnel project seciton-->
                 <h3>SQL usage funnels</h3>
                     <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/CodeCademy/Analyze%20Data%20with%20SQL%20Skill%20Path/Usage%20Funnels%20With%20Warby%20Parker%20(SQL)/Usage-Funnels-With-Warby-Parker-sql.sql" class="aTest"><img src="./resources/images/SQLPowerPointImg.png" alt="sql powerpoint img" class="imgTest"></a>
                     <p><span>Description:</span> This was an attempt to work thorugh a dataset and find out how effective different marketing strategies were in leading to sales and where users lost interest.</p>
                     <p><span>Technologies used:</span> SQL, VS code, text document, PowerPoint and Excel</p>
             </div>
         </div>
+    <!-- human languages section -->
     <div class="humanLanguages">
         <h3>Human languages</h3>
         <p>English</p>
         <p>Danish</p>
         <p>German (tourist level)</p>
     </div>
+    <!-- programming languages section -->
     <div class="programmingLanguages">
         <h3>Programming languages</h3>
+        <!-- programming logos -->
         <div class="programmingLogos">
+            <!-- logo row 1 -->
             <div>
                 <i class="fa-brands fa-html5 fa-3x"></i>
                 <i class="fa-brands fa-css3-alt fa-3x"></i>
@@ -96,6 +108,7 @@
                 <img src="./resources/images/cSharpLogo.png" alt="c sharp logo" class="cSharpLogo" id="cSharpImg">
                 <i class="fa-brands fa-github fa-3x"></i>
             </div>
+            <!-- logo row 2 -->
             <div>
                 <i class="fa-brands fa-git fa-3x"></i>
                 <i class="fa-solid fa-terminal fa-2x"></i>
