--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -96,7 +96,7 @@
     </div>
     <!-- programming languages section -->
     <div class="programmingLanguages">
-        <h3>Programming languages</h3>
+        <h3>Programming languages and skills</h3>
         <!-- programming logos -->
         <div class="programmingLogos">
             <!-- logo row 1 -->
