--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -89,14 +89,14 @@
         </div>
     <!-- human languages section -->
     <div class="humanLanguages">
-        <h3>Human languages</h3>
+        <h3>Languages</h3>
         <p>English</p>
         <p>Danish</p>
         <p>German (tourist level)</p>
     </div>
     <!-- programming languages section -->
     <div class="programmingLanguages">
-        <h3>Programming languages and skills</h3>
+        <h3>Skills</h3>
         <!-- programming logos -->
         <div class="programmingLogos">
             <!-- logo row 1 -->
