try to change color on bigproject description

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -62,9 +62,9 @@
         <h2>Bigger projects</h2>
         <div class="biggerProjects">
             <ul>
-                <li>Brians Gym website <br>(a parody club site)</li>
-                <li>Roulette game <br>(C#)</li>
-                <li>SQL usage funnels <br>(SQL and presentation)</li>
+                <li>Brians Gym website <br><p class="biggerProjectsUnderText" id="bPUT1">(a parody club site)</p></li>
+                <li>Roulette game <br><p class="biggerProjectsUnderText" id="bPUT2">(C#)</p></li>
+                <li>SQL usage funnels <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and presentation)</p></li>
             </ul>
             <img src="./resources/images/billede af en selv sort hvid.jpeg" alt="image of me" class="portrait">
         </div>
