--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
@@ -38,7 +38,9 @@
     <p>Jens Raunstrup</p>
     <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="link" id="cLink"><p>Go to my linkedin profile</p></a>
     <!-- image links -->
-    <a href="mailto:j.raunstrup@gmail.com" class="imgLinkC" id="emailImg"><i class="fa-regular fa-envelope fa-3x"></i></a>
-    <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="" id="linkdinImg"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+    <div>
+        <a href="mailto:j.raunstrup@gmail.com" class="imgLinkC" id="emailImg"><i class="fa-regular fa-envelope fa-3x"></i></a>
+        <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="" id="linkdinImg"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+    </div>
 </body>
 </html>
