add pictures to project buttons

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
@@ -34,66 +34,77 @@
     <div class="projectsList">
       <!-- fotomatic section -->
       <div class="fotomatic">
-        <h3>Camera site: Fotomatic</h3>
+        <a href="https://j-raunstrup.github.io/CodeCademy/F1C1_start/">
+          <h3>Camera site: Fotomatic</h3>
           <p>This can be viewed on dekstop and mobile</p>
-          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/F1C1_start/">Click to go to site!</a>
+        </a>
       </div>
       <!-- teaCozy section -->
       <div class="teaCozy">
-      <h3>Tea store site: TeaCozy</h3>
-        <p>This can be viewed on desktop only</p>
-        <a class="button" href="https://j-raunstrup.github.io/CodeCademy/TeaCozy/">Click to go to site!</a>
+        <a href="https://j-raunstrup.github.io/CodeCademy/TeaCozy/">
+          <h3>Tea store site: TeaCozy</h3>
+          <p>This can be viewed on desktop only</p>
+        </a>
       </div>
       <!-- colmar academy section -->
       <div class="colmarAcademy">
-        <h3>Learn to code site: ColmarAcademy</h3>
-        <p>This can be viewed on desktop and mobile</p>
-        <a class="button" href="https://j-raunstrup.github.io/CodeCademy/ColmarAcademy">Click to go to site!</a>
+        <a href="https://j-raunstrup.github.io/CodeCademy/ColmarAcademy">
+          <h3>Learn to code site: ColmarAcademy</h3>
+          <p>This can be viewed on desktop and mobile</p>
+        </a>
       </div>
       <!-- grundforløbs prøve section -->
-      <div class="grundforløbs prøve">
-        <h3>Events for companies site: Event centrum</h3>
-        <p>(Earlier basic course exam for webintegrator)</p>
-        <p>This can be viewed on desktop only</p>
-        <a class="button" href="https://j-raunstrup.github.io/Webintegrator-grundforløbsprøve">Click to go to site!</a>
+      <div class="grundforløbsPrøve">
+        <a href="https://j-raunstrup.github.io/Webintegrator-grundforløbsprøve">
+          <h3>Events for companies site: Event centrum</h3>
+          <p>(Earlier basic course exam for webintegrator)</p>
+          <p>This can be viewed on desktop only</p>
+        </a>
       </div>
       <!-- excursion section -->
       <div class="excursion">
-        <h3>Phone app annoncement site: Excursion</h3>
-        <p>This can be viewed on desktop and mobile</p>
-        <a class="button" href="https://j-raunstrup.github.io/CodeCademy/excursion">Click to go to site!</a>
+        <a href="https://j-raunstrup.github.io/CodeCademy/excursion">
+          <h3>Phone app annoncement site: Excursion</h3>
+          <p>This can be viewed on desktop and mobile</p>
+        </a>
       </div>
       <!-- html and css cheatsheet section -->    
       <div class="htmlAndCssCheatsheet">
-        <h3>Cheatsheet for css layout</h3>
-        <p>This can be viewed on desktop and mobile</p>
-        <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/html-css-cheatsheet-starting">Click to go to site!</a>
+        <a class="paperBox" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/html-css-cheatsheet-starting">
+          <h3>Cheatsheet for css layout</h3>
+          <p>This can be viewed on desktop and mobile</p>
+        </a>
       </div>
       <!-- website design system section -->
       <div class="websiteDesignSystem">
-        <h3>Website design system site</h3>
-        <p>Showing an example of deciding on colours fonts and the basic elements of a site</p>
-        <p>This can be viewed on desktop only</p>
-        <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/website-design-system-starting/starting">Click to go to site!</a>
+        <a class="paperBox" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/website-design-system-starting/starting">
+          <h3>Website design system site</h3>
+          <p>Showing an example of deciding on colours fonts and the basic elements of a site</p>
+          <p>This can be viewed on desktop only</p>
+        </a>
       </div>
       <!-- brians garage section -->
       <div class="briansGarage">
-        <h3>Company site: brians garage (parody)</h3>
+        <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/flexbox-business-site-starting">
+          <h3>Company site: brians garage (parody)</h3>
           <p>This can be viewed on desktop and mobile</p>
-          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/flexbox-business-site-starting">Click to go to site!</a>
+        </a>
       </div>
       <!-- brians gym section -->
       <div class="briansGym">
-        <h3>Club site: brians gym (parody)</h3>
-        <p>Thsi can be viewed on desktop and mobile</p>
-        <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting">Click to go to site!</a>
+        <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting">
+          <h3>Club site: brians gym (parody)</h3>
+          <p>Thsi can be viewed on desktop and mobile</p>
+        </a>
       </div>
       <!-- number guesser site section -->
       <div class="numberGuesserSite">
-        <h3>Number guesser site: (Implements a little javascript)</h3>
+        <a class="paperBox" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/number-guesser-starting">
+          <h3 class="numberGuesserH31">Number guesser site:</h3>
+          <h3 class="numberGuesserH32">(Implements a little javascript)</h3>
           <p>I wrote the javascript from specified assignments. The css and html was already completed. I made the javascript</p>
           <p>This can be viewed on desktop only</p>
-          <a class="button" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/number-guesser-starting">Click to go to site!</a>
+        </a>
       </div>
     </div>
     <!-- github repositories section -->
