register progress for the day

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -101,21 +101,30 @@
         <div class="programmingLogos">
             <!-- logo row 1 -->
             <div>
+                <div class="nes1">
                 <i class="fa-brands fa-html5 fa-3x"></i>
                 <i class="fa-brands fa-css3-alt fa-3x"></i>
                 <i class="fa-brands fa-js fa-3x"></i>
+                </div>
+                <div class="nes1">
                 <i class="fa-solid fa-database fa-3x"></i>
                 <img src="./resources/images/cSharpLogo.png" alt="c sharp logo" class="cSharpLogo" id="cSharpImg">
                 <i class="fa-brands fa-github fa-3x"></i>
             </div>
+            </div>
             <!-- logo row 2 -->
             <div>
+                <div class="nes2">
                 <i class="fa-brands fa-git fa-3x"></i>
                 <i class="fa-solid fa-terminal fa-2x"></i>
                 <img src="./resources/images/powerBi.svg.png" alt="powerBi logo" class="powerBiLogo" id="powerBiImg">
+                </div>
+                <br>
+                <div class="nes2">
                 <img src="./resources/images/blenderLogo.svg" alt="blenderLogo" class="blenderLogo" id="blenderImg">
                 <i class="fa-brands fa-chrome fa-2x"></i>
                 <img src="./resources/images/visualStudioCodeLogo.png" alt="vsCode logo" class="vsCodeLogo" id="vsCodeImg">
+            </div>
             </div>
         </div>
     </div>
