--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
@@ -27,6 +27,7 @@
     </label>
   </div>
   <!-- projects desciption section-->
+  <div class="miniBody">
     <h1>Projects</h1>
     <p>These are some of the things I have made</p>
     <p>Click on the buttons to see some of my projects: </p>
@@ -113,5 +114,6 @@
       <p>Here the code behind my projects can be viewed. Its updated from time to time</p>
       <a class="button" href="https://github.com/J-Raunstrup/J-Raunstrup.github.io" id="whiteButton1">Click to see my code!</a>
     </div>
+  </div>
 </body>
 </html>
