add last changes with css

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
@@ -95,7 +95,7 @@
       <div class="briansGym">
         <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting">
           <h3>Club site: brians gym (parody)</h3>
-          <p>Thsi can be viewed on desktop and mobile</p>
+          <p>This can be viewed on desktop and mobile</p>
         </a>
       </div>
       <!-- number guesser site section -->
@@ -105,6 +105,29 @@
           <h3 class="numberGuesserH32">(Implements a little javascript)</h3>
           <p>I wrote the javascript from specified assignments. The css and html was already completed. I made the javascript</p>
           <p>This can be viewed on desktop only</p>
+        </a>
+      </div>
+      <!-- number guesser site section1 -->
+      <div class="rouletteGame">
+        <a class="paperBox" href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/JakobC%23Bootcamp/repos/Roulettespil%20C%23/Roulettespil%20C%23/Program.cs">
+          <h3 class="numberGuesserH31">C# roulette game</h3>
+          <p>This was an attempt to make a text based game using functions and some built in methods and objects in C#.</p>
+          <p>This button links to the code behind the project</p>
+        </a>
+      </div>
+      <!-- number guesser site section2 -->
+      <div class="sqlUsageFunnels">
+        <a class="paperBox" href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/tree/main/CodeCademy/Analyze%20Data%20with%20SQL%20Skill%20Path/Usage%20Funnels%20With%20Warby%20Parker%20(SQL)">
+          <h3 class="numberGuesserH31">SQL usage funnels</h3>
+          <p>This was an attempt to work through a dataset with SQL queries. Come to some insights from those findings and then present them with a powerPoint</p>
+          <p>This button links to the files in the project</p>
+        </a>
+      </div>
+      <div class="blenderProjects">
+        <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/tree/main/3dModelling/blender">
+          <h3 class="numberGuesserH31">3D model projects</h3>
+          <p>Here my 3d models can be viewed. Made with blender</p>
+          <p>This button links to all my 3D model files </p>
         </a>
       </div>
     </div>
