--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -63,28 +63,35 @@
         <div class="biggerProjects">
             <ul>
                 <li>Brians Gym website <br><p class="biggerProjectsUnderText" id="bPUT1">(a parody club site)</p></li>
-                <li>Roulette game <br><p class="biggerProjectsUnderText" id="bPUT2">(C#)</p></li>
-                <li>SQL usage funnels <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and presentation)</p></li>
+                <li>Power Bi visualization <br><p class="biggerProjectsUnderText" id="bPUT2">(Microsoft Power Bi)</p></li>
+                <li>CodeCademy SQL article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
             </ul>
             <img src="./resources/images/billede af en selv sort hvid.jpeg" alt="image of me" class="portrait">
         </div>
         <p>Press/click images below to go to corresponding sites</p>
             <!-- brians gym project seciton-->
-            <h3>Brians gym website</h3>
             <div class="bigProjectDiv">
+                <h3>Brians gym website</h3>
+                <div>
                 <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting/"><img src="./resources/images/brianSiteImage-kopi.png" alt="brianSiteImage"></a>
                 <p><span>Description:</span> This project was an attempt to make a club site. It's also a parody so some sarcasm has been used.</p>
                 <p><span>Technologies used:</span> HTML, CSS, VS code text editor, github and github pages.</p>
                 <!-- roulette project seciton-->
-                <h3>Roulette project</h3>
-                    <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/JakobC%23Bootcamp/repos/Roulettespil%20C%23/Roulettespil%20C%23/Program.cs"><img src="resources/images/rouletteProjectImg.png" alt=""></a>
-                    <p><span>Description:</span> This project was an attempt to make a text based roulette game, where functions and built in methods were used.</p>
-                    <p><span>Technologies used:</span> C# and visual studio</p>
+            </div>
+                <h3>Power Bi visualization</h3>
+                <div>
+                    <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/tree/main/DataVisualization/microsoftPowerBi"><img src="resources/images/powerBiScreenshot.png" alt=""></a>
+                    <p><span>Description:</span> This project was an attempt to try and visualize an SQL dataset and make it interactive.</p>
+                    <p><span>Technologies used:</span> Microsoft Power Bi and SQL.</p>
+                </div>
                 <!-- SQL usage funnel project seciton-->
-                <h3>SQL usage funnels</h3>
-                    <a href="https://github.com/J-Raunstrup/J-Raunstrup.github.io/blob/main/CodeCademy/Analyze%20Data%20with%20SQL%20Skill%20Path/Usage%20Funnels%20With%20Warby%20Parker%20(SQL)/Usage-Funnels-With-Warby-Parker-sql.sql" class="aTest"><img src="./resources/images/SQLPowerPointImg.png" alt="sql powerpoint img" class="imgTest"></a>
-                    <p><span>Description:</span> This was an attempt to work thorugh a dataset and find out how effective different marketing strategies were in leading to sales and where users lost interest.</p>
-                    <p><span>Technologies used:</span> SQL, VS code, text document, PowerPoint and Excel</p>
+                <h3>CodeCademy SQL article</h3>
+                <div>
+                    <a href="https://www.codecademy.com/resources/docs/sql/window-functions/ntile" class="aTest"><img src="./resources/images/codecademyArticle.png" alt="sql powerpoint img" class="imgTest"></a>
+                    <p><span>Description:</span> This was an attempt to teach other people about a coding concept and work in a public repository with other people.</p>
+                    <p><span>Technologies used:</span> SQL, GitHub, Markdown, VS code.</p>
+                    <p class="markdownLink"><span>Link to markdown file:</span> <a href="https://github.com/Codecademy/docs/blob/main/content/sql/concepts/window-functions/terms/ntile/ntile.md">Click to go to markdown file</a></p>
+                </div>
             </div>
         </div>
     <!-- human languages section -->
