add new portrait to site

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -66,7 +66,7 @@
                 <li>Power Bi visualization <br><p class="biggerProjectsUnderText" id="bPUT2">(Microsoft Power Bi)</p></li>
                 <li>CodeCademy SQL article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
             </ul>
-            <img src="./resources/images/billede af en selv sort hvid.jpeg" alt="image of me" class="portrait">
+            <img src="./resources/images/billede af en selv farve rettet.jpg" alt="image of me" class="portrait">
         </div>
         <p>Press/click images below to go to corresponding sites</p>
             <!-- brians gym project seciton-->
