remove sql from bigger projects because duplicate

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -64,7 +64,7 @@
             <ul>
                 <li>Brians Gym website <br><p class="biggerProjectsUnderText" id="bPUT1">(a parody club site)</p></li>
                 <li>Power Bi visualization <br><p class="biggerProjectsUnderText" id="bPUT2">(Microsoft Power Bi)</p></li>
-                <li>CodeCademy SQL article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
+                <li>CodeCademy article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
             </ul>
             <img src="./resources/images/billede af en selv farve rettet.jpg" alt="image of me" class="portrait">
         </div>
