update with working dark mode only missing button

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/contactPage/index.html
@@ -6,7 +6,6 @@
     <title>Contact</title>
     <link rel="stylesheet" href="./resources/css/style.css">
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
 <body>
       <!-- header section-->
@@ -19,11 +18,13 @@
     <div class="DMDiv">
         <p>Dark mode:</p>
         <label class="switch">
-            <input type="checkbox" onclick="toggleDarkMode2()">
-            <!-- luke solution-->
             <!-- 
-                            <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+            <input type="checkbox" id="toggle">
             -->
+            <!-- luke solution-->
+             
+                            <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+            
             <span class="slider"></span>
         </label>
     </div>
@@ -42,5 +43,6 @@
         <a href="mailto:j.raunstrup@gmail.com" class="imgLinkC" id="emailImg"><i class="fa-regular fa-envelope fa-3x"></i></a>
         <a href="https://www.linkedin.com/in/jens-raunstrup-33b189254/" class="" id="linkdinImg"><i class="fa-brands fa-linkedin fa-3x"></i></a>
     </div>
+    <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </body>
 </html>
