--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/resources/nestedPages/projectsPage/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="./resources/css/style.css">
-    <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
 <body>
   <!-- header section-->
@@ -18,11 +17,13 @@
   <div class="DMDiv">
     <p>Dark mode:</p>
     <label class="switch">
-        <input type="checkbox" onclick="toggleDarkMode3()">
+      <!--
+        <input type="checkbox" id="toggle">
+        -->
           <!-- luke solution-->
-            <!-- 
+             
               <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
-            -->
+            
         <span class="slider"></span>
     </label>
   </div>
@@ -138,5 +139,6 @@
       <a class="button" href="https://github.com/J-Raunstrup/J-Raunstrup.github.io" id="whiteButton1">Click to see my code!</a>
     </div>
   </div>
+  <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </body>
 </html>
