--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -6,7 +6,6 @@
     <title>Jens' new projects site</title>
     <link rel="stylesheet" href="./resources/css/style.css">
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
 <body id="body">
     <!-- 
@@ -42,11 +41,13 @@
     <div class="DMDiv">
         <p>Dark mode:</p>
         <label class="switch">
-            <input type="checkbox" id="darkmode" onclick="toggleDarkMode1()">
-                <!-- luke solution-->
             <!-- 
-                <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+            <input type="checkbox" id="toggle">
             -->
+                <!-- luke solution-->
+            
+                <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+            
             <span class="slider"></span>
         </label>
     </div>
@@ -64,7 +65,7 @@
             <ul>
                 <li>Brians Gym website <br><p class="biggerProjectsUnderText" id="bPUT1">(a parody club site)</p></li>
                 <li>Power Bi visualization <br><p class="biggerProjectsUnderText" id="bPUT2">(Microsoft Power Bi)</p></li>
-                <li>CodeCademy article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
+                <li>CodeCademy SQL article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
             </ul>
             <img src="./resources/images/billede af en selv farve rettet.jpg" alt="image of me" class="portrait">
         </div>
@@ -135,5 +136,6 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </body>
 </html>
