add working darkmode to site

--- a/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23/index.html
@@ -49,7 +49,7 @@
             <span class="slider"></span>
         </label>
         -->
-        <button class="button button1" onclick="updateDarkMode()">Switch mode</button>
+        <button class="button button1" onclick="updateDarkMode()">Switch</button>
     </div>
     <!-- about me section -->
     <div>
