--- a/resources/nestedPages/contactPage/index.html
+++ b/resources/nestedPages/contactPage/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="shortcut icon" href="./resources/images/list-icon-1454.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
 </head>
 <body>
