--- a/resources/nestedPages/projectsPage/index.html
+++ b/resources/nestedPages/projectsPage/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="shortcut icon" href="./resources/images/list-icon-1454.png" type="image/x-icon">
 </head>
 <body>
   <!-- header section-->
