--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jens' new projects site</title>
+    <title>Jens' projects site</title>
     <link rel="stylesheet" href="./resources/css/style.css">
     <link rel="shortcut icon" href="./resources/images/list-icon-1454.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
