--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jens' projects site test4</title>
+    <title>Jens' projects site test5</title>
     <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="shortcut icon" href="./resources/images/list-icon-1454.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
 </head>
-<body id="body">
+<body>
     <!-- 
         burde vise billeder af de forskellige teknologier jeg kunne endten i starten eller slutningen. bl.a. chrome dev tools. sql, css, html, javscirpt, git, github.  command line,
         C#, maybe visual studio code. maybe a little blender. though maybe best to exclude. maybe node though i think best to exclude for now. maybe also include a little power bi on the site.
