--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jens' projects site test8</title>
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" type=“text/css” href="resources/css/style.css">
     <link rel="icon" href="./resources/images/list-icon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
 </head>
