--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jens' new projects site11</title>
-    <link rel="stylesheet" href="./resources/css/style.css">
+    <title>Jens' new projects site20</title>
+    <link rel="stylesheet" href="resources/CSS/style.css">
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
