--- a/CodeCademy/old-main-sites/new-main-site-17-11-23 15.39.33/index.html
+++ b/CodeCademy/old-main-sites/new-main-site-17-11-23 15.39.33/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jens' projects site22</title>
-    <link rel="stylesheet" href="resources/CSS/style.css">
+    <title>Jens' new projects site</title>
+    <link rel="stylesheet" href="./resources/css/style.css">
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </head>
 <body id="body">
     <!-- 
@@ -40,16 +41,14 @@
     <!-- dark mode button -->
     <div class="DMDiv">
         <p>Dark mode:</p>
-        <!-- old solution with prettier checkbox though not svaing the checkbox across sites. -->
-        <!-- 
         <label class="switch">
-            
-                <input type="checkbox" onclick="updateDarkMode()">
-            
+            <input type="checkbox" id="darkmode" onclick="toggleDarkMode1()">
+                <!-- luke solution-->
+            <!-- 
+                <input type="checkbox" id="darkmode" onclick="updateDarkMode()">
+            -->
             <span class="slider"></span>
         </label>
-        -->
-        <button class="button button1" onclick="updateDarkMode()">Switch</button>
     </div>
     <!-- about me section -->
     <div>
@@ -65,7 +64,7 @@
             <ul>
                 <li>Brians Gym website <br><p class="biggerProjectsUnderText" id="bPUT1">(a parody club site)</p></li>
                 <li>Power Bi visualization <br><p class="biggerProjectsUnderText" id="bPUT2">(Microsoft Power Bi)</p></li>
-                <li>CodeCademy SQL article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
+                <li>CodeCademy article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
             </ul>
             <img src="./resources/images/billede af en selv farve rettet.jpg" alt="image of me" class="portrait">
         </div>
@@ -136,6 +135,5 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="./resources/javascript/script.js"></script>
 </body>
 </html>
