add icons to each page in browser view

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jens' projects site</title>
     <link rel="stylesheet" href="resources/CSS/style.css">
+    <link rel="icon" href="./resources/images/list-icon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
 </head>
 <body id="body">
