--- a/CodeCademy/ColmarAcademy/index.html
+++ b/CodeCademy/ColmarAcademy/index.html
@@ -66,7 +66,7 @@
                     <div class="tinyTextBox">
                         <h3>Orientation date</h3>
                             <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                            <p><a href="url">Read more</a></p>
+                            <p><a href="">Read more</a></p>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 <div class="tinyTextBox">    
                     <h3>Our campus</h3>
                     <p>Find which campus is close to you</p>
-                    <p><a href="url">Read more</a></p>
+                    <p><a href="">Read more</a></p>
                 </div>
             </div>
             <div class="guestLecture">
@@ -90,7 +90,7 @@
                             <div class="test2">    
                                 <p>about music in medical treatment</p>
                             </div>    
-                            <p><a href="url">Read more</a></p>
+                            <p><a href="">Read more</a></p>
                         </div>
                     </div>
                 </div>
