change highlighted 1. project on main page and remove 1 language

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         <p>Press/click images below to go to corresponding sites</p>
             <!-- brians gym project seciton-->
             <div class="bigProjectDiv">
-                <h3>Brians gym website</h3>
+                <h3>Fotomatic</h3>
                 <div>
-                <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting/"><img src="./resources/images/brianSiteImage-kopi.png" alt="brianSiteImage"></a>
-                <p><span>Description:</span> This project was an attempt to make a club site. It's also a parody so some sarcasm has been used.</p>
+                <a href="https://j-raunstrup.github.io/CodeCademy/F1C1_start/"><img src="./resources/images/fotomaticPics/desktop/test4.png" alt="fotomaticSiteImage"></a>
+                <p><span>Description:</span> This project was an attempt to make a fictional camera website</p>
                 <p><span>Technologies used:</span> HTML, CSS, VS code text editor, github and github pages.</p>
                 <!-- roulette project seciton-->
             </div>
@@ -103,7 +103,6 @@
         <h3>Languages</h3>
         <p>English</p>
         <p>Danish</p>
-        <p>German (tourist level)</p>
     </div>
     <!-- programming languages section -->
     <div class="programmingLanguages">
