try to make changes to es2011 app

--- a/ES2011/sideTilJørgen/nuværendeEgenSidePåES2011App/index.html
+++ b/ES2011/sideTilJørgen/nuværendeEgenSidePåES2011App/index.html
@@ -33,7 +33,7 @@
         deadline done by december 19. max.
      -->
      <!-- header section -->
-    <div class="header">
+    <div class="topDivH">
         <a href="./resources/nestedPages/projectsPage/index.html" id="changeMe1"><p class="projectsHeader" id="change1">Projects</p></a>
         <a href="./index.html" id="changeMe2"><p class="aboutMeHeader" id="change2">About me</p></a>
         <a href="./resources/nestedPages/contactPage/index.html" id="changeMe3"><p class="contactHeader">Contact</p></a>
