try to make changes to header

--- a/ES2011/sideTilJørgen/nuværendeEgenSidePåES2011App/resources/nestedPages/contactPage/index.html
+++ b/ES2011/sideTilJørgen/nuværendeEgenSidePåES2011App/resources/nestedPages/contactPage/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
       <!-- header section-->
-    <div class="header">
+    <div class="topDivH">
         <a href="../projectsPage/index.html" id="changeMe1"><p class="projectsHeader">Projects</p></a>
         <a href="../../../index.html" id="changeMe2"><p class="aboutMeHeader">About me</p></a>
         <a href="" id="changeMe3"><p class="contactHeader" id="change3">Contact</p></a>
