--- a/ES2011/sideTilJørgen/nuværendeEgenSidePåES2011App/resources/nestedPages/projectsPage/index.html
+++ b/ES2011/sideTilJørgen/nuværendeEgenSidePåES2011App/resources/nestedPages/projectsPage/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- header section-->
-  <div class="header">
+  <div class="topDivH">
     <a href="" id="changeMe1"><p class="projectsHeader" id="change1">Projects</p></a>
     <a href="../../../index.html" id="changeMe2"><p class="aboutMeHeader">About me</p></a>
     <a href="../contactPage/index.html" id="changeMe3"><p class="contactHeader">Contact</p></a>
