--- a/CodeCademy/TeaCozy/index.html
+++ b/CodeCademy/TeaCozy/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea Cozy</title>
     <link rel="stylesheet" href="../TeaCozy/resources/css/style.css">
-    <!-- added for bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- bootstrap tried. broke the website sadly. for bootstrap-->
 </head>
 <body>
     <header>
@@ -81,6 +80,5 @@
     <footer>
         <h5>copyright The Tea Cozy 2017</h5>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
