correct main page big projects and projects site.

--- a/resources/nestedPages/projectsPage/index.html
+++ b/resources/nestedPages/projectsPage/index.html
@@ -91,14 +91,14 @@
       <!-- brians garage section -->
       <div class="briansGarage">
         <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/flexbox-business-site-starting">
-          <h3>Company site: brians garage (parody)</h3>
+          <h3>(Parody) Company site: brians garage</h3>
           <p>This can be viewed on desktop and mobile</p>
         </a>
       </div>
       <!-- brians gym section -->
       <div class="briansGym">
         <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting">
-          <h3>Club site: brians gym (parody)</h3>
+          <h3>(Parody) Club site: brians gym</h3>
           <p>This can be viewed on desktop and mobile</p>
         </a>
       </div>
