replace javascript with bootstrap on main page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2>Bigger projects</h2>
         <div class="biggerProjects">
             <ul>
-                <li>Fotomatic <br><p class="biggerProjectsUnderText" id="bPUT1">(HTML, CSS and JavaScript)</p></li>
+                <li>Fotomatic <br><p class="biggerProjectsUnderText" id="bPUT1">(HTML, CSS and Bootstrap)</p></li>
                 <li>Power Bi visualization <br><p class="biggerProjectsUnderText" id="bPUT2">(Microsoft Power Bi)</p></li>
                 <li>CodeCademy SQL article <br><p class="biggerProjectsUnderText" id="bPUT3">(SQL and markdown)</p></li>
             </ul>
