add bootstrap to fotomatic technologies description

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div>
                 <a href="https://j-raunstrup.github.io/CodeCademy/F1C1_start/"><img src="./resources/images/fotomaticPicture.png" alt="fotomaticSiteImage"></a>
                 <p><span>Description:</span> This project was an attempt to make a fictional camera website</p>
-                <p><span>Technologies used:</span> HTML, CSS, VS code text editor, github and github pages.</p>
+                <p><span>Technologies used:</span> HTML, CSS, Bootstrap, VS code text editor, github and github pages.</p>
                 <!-- roulette project seciton-->
             </div>
                 <h3>Power Bi visualization</h3>
