add correction with link directions on main page and update md file with more new technologies

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </ul>
             <img src="./resources/images/billede af en selv farve rettet.jpg" alt="image of me" class="portrait">
         </div>
-        <p>Press/click images below to go to corresponding sites</p>
+        <p>Press/click images below to go to the corresponding sites</p>
             <!-- brians gym project seciton-->
             <div class="bigProjectDiv">
                 <h3>Fotomatic</h3>
