add a little more content to AMRC buttons

--- a/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
@@ -20,7 +20,14 @@
                 <p>Kontakt</p>
             </span>
             <span id="testId1">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.Aenean vulputate eleifend tellus.Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+                <span>
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>Mail: <a href="mailto:agneschristens@yahoo.dk">agneschristens@yahoo.dk</a></p>
+                </span>
+                <span>
+                    <i class="fa-solid fa-phone"></i>
+                    <p>Telefon: <a href="tel:+4524891780">+4524891780</a></p>
+                </span>
             </span>
         </div>
         <div class="divMedTekstBoks" onclick="testFunction2()">
@@ -29,7 +36,11 @@
                 <p>Showreel</p>
             </span>
             <span id="testId2">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.Aenean vulputate eleifend tellus.Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+                <video width="640" height="360" controls>
+                    <source src="https://www.youtube.com/watch?v=JPqxgGPUwmw" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+                <p></p>
             </span>
         </div>
         <div class="divMedTekstBoks" onclick="testFunction3()">
@@ -47,7 +58,7 @@
                 <p>Portfolie</p>
             </span>
             <span id="testId4">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.Aenean vulputate eleifend tellus.Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit<a href="resources/PDF files/Min portfolie.pdf"> PDF</a></p>
             </span>
         </div>
         <div class="divMedTekstBoks" onclick="testFunction5()">
@@ -56,7 +67,18 @@
                 <p>Fotos</p>
             </span>
             <span id="testId5">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.Aenean vulputate eleifend tellus.Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+                <p>test</p>
+                <span>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                    <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
+                </span>
             </span>
         </div>
     </div>
